--- a/.github/workflows/mlops.yml
+++ b/.github/workflows/mlops.yml
@@ -20,6 +20,9 @@ jobs:
     - name: Install dependencies
       run: |
         pip install -r requirements.txt
+        python -m pip install --upgrade pip
+        pip install mlflow
+
 
     - name: Run training script
       run: |
